--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "use-local-storage": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
